typestate-macro/tests/fail/conflicting_automata_attr.stderr
error: Conflicting attributes are declared.
 --> $DIR/conflicting_automata_attr.rs:6:5
  |
6 |     #[automata] // this should error because it is the second one
  |     ^^^^^^^^^^^
